@@ -14,6 +14,7 @@ from unittest2 import skip
 
 from sqlalchemy import Column
 from sqlalchemy import Integer
+from sqlalchemy import Unicode
 
 from flask_restless import JSONAPI_MIMETYPE
 
@@ -35,10 +36,10 @@ class TestMetadata(ManagerTestBase):
         class Person(self.Base):
             __tablename__ = 'person'
             id = Column(Integer, primary_key=True)
+            name = Column(Unicode)
 
         self.Person = Person
         self.Base.metadata.create_all()
-        self.manager.create_api(Person)
 
     def test_total(self):
         """Tests that a request for (a subset of) all instances of a model
@@ -48,6 +49,7 @@ class TestMetadata(ManagerTestBase):
         people = [self.Person() for n in range(15)]
         self.session.add_all(people)
         self.session.commit()
+        self.manager.create_api(self.Person)
         response = self.app.get('/api/person')
         document = loads(response.data)
         assert document['meta']['total'] == 15
@@ -55,7 +57,35 @@ class TestMetadata(ManagerTestBase):
     @skip('Not sure whether this should be implemented')
     def test_http_headers(self):
         """Tests that HTTP headers appear as elements in the JSON metadata."""
+        self.manager.create_api(self.Person)
         response = self.app.get('/api/person')
         document = loads(response.data)
         meta = document['meta']
         assert meta['Content-Type'] == JSONAPI_MIMETYPE
+
+    def test_model_info(self):
+        """Test for getting schema metadata.
+
+        For more information, see GitHub issue #625.
+
+        """
+        self.manager.create_api(self.Person)
+        response = self.app.get('/api')
+        document = loads(response.data)
+        info = document['meta']['modelinfo']
+        self.assertEqual(list(info.keys()), ['person'])
+        self.assertEqual(sorted(info['person']), ['primarykey', 'url'])
+        self.assertEqual(info['person']['primarykey'], 'id')
+        self.assertTrue(info['person']['url'].endswith('/api/person'))
+
+    def test_model_info_custom_primary_key(self):
+        """Test for getting schema metadata with custom primary key.
+
+        For more information, see GitHub issue #625.
+
+        """
+        self.manager.create_api(self.Person, primary_key='name')
+        response = self.app.get('/api')
+        document = loads(response.data)
+        info = document['meta']['modelinfo']
+        self.assertEqual(info['person']['primarykey'], 'name')
