@@ -47,6 +47,7 @@ Not yet released.
 - :issue:`590`: allows user to specify a custom operator for filters.
 - :issue:`599`: fixes `unicode` bug using :func:`!urlparse.urljoin` with the
   `future`_ library in resource serialization.
+- :issue:`625`: adds schema metadata to root endpoint.
 
 .. _future: http://python-future.org/
 
